8275825: [lworld] Unnecessary buffering because trivial accessor methods are not C2 compiled