src/hotspot/share/runtime/safepoint.cpp
@@ -924,23 +924,16 @@ void ThreadSafepointState::handle_polling_page_exception() {
 
     GrowableArray<Handle> return_values;
     InlineKlass* vk = NULL;
-
-    if (return_oop && InlineTypeReturnedAsFields) {
-      SignatureStream ss(method->signature());
-      while (!ss.at_return_type()) {
-        ss.next();
-      }
-      if (ss.type() == T_INLINE_TYPE) {
-        // Check if inline type is returned as fields
-        vk = InlineKlass::returned_inline_klass(map);
-        if (vk != NULL) {
-          // We're at a safepoint at the return of a method that returns
-          // multiple values. We must make sure we preserve the oop values
-          // across the safepoint.
-          assert(vk == method->returned_inline_type(thread()), "bad inline klass");
-          vk->save_oop_fields(map, return_values);
-          return_oop = false;
-        }
+    if (return_oop && InlineTypeReturnedAsFields && method->result_type() == T_INLINE_TYPE) {
+      // Check if inline type is returned as fields
+      vk = InlineKlass::returned_inline_klass(map);
+      if (vk != NULL) {
+        // We're at a safepoint at the return of a method that returns
+        // multiple values. We must make sure we preserve the oop values
+        // across the safepoint.
+        assert(vk == method->returned_inline_type(thread()), "bad inline klass");
+        vk->save_oop_fields(map, return_values);
+        return_oop = false;
       }
     }
 
