test/hotspot/jtreg/compiler/valhalla/inlinetypes/TestC2CCalls.java
@@ -25,7 +25,7 @@
  * @test
  * @key randomness
  * @summary Test inline type calling convention with compiled to compiled calls.
- * @library /test/lib /test/lib /compiler/whitebox /
+ * @library /test/lib /compiler/whitebox /
  * @compile TestC2CCalls.java
  * @run driver jdk.test.lib.helpers.ClassFileInstaller sun.hotspot.WhiteBox
  * @run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
